@@ -39,7 +39,6 @@ void preferences_set (struct arglist *);
 void preferences_dump (void);
 int preferences_process (char *, struct arglist *);
 int preferences_plugin_timeout (struct arglist *, char *);
-int preferences_get_bool (struct arglist *, char *);
 char *preferences_get_string (struct arglist *, char *);
 
 #endif
